fix(cockpit/layout): fix overflow of resize handle
Closes CAM-1022

--- a/webapps/camunda/webapp/src/main/webapp/assets/css/cockpit/app.css
+++ b/webapps/camunda/webapp/src/main/webapp/assets/css/cockpit/app.css
@@ -134,22 +134,6 @@ textarea.in-place-edit {
     margin: 10px;
   }
 
-  .ctn-column {
-    border-left: solid 1px #BBB;
-  }
-
-  .ctn-column:first-child {
-    border-left: none;
-  }
-
-  .ctn-row {
-    border-top: solid 1px #BBB;
-  }
-
-  .ctn-row:first-child {
-    border-top: none;
-  }
-
   .ctn-sitebar {
     width: 250px;
     right: auto;
